Trial adding overflow hidden to layout to avoid router scrolling issues

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -10,12 +10,12 @@
 
 html, body {
     scroll-behavior: auto;
-    overflow-x: hidden;
+    // overflow-x: hidden;
    }
 
 body {
     background: rgb(33,37,41);
-    overflow-x: hidden;
+    // overflow-x: hidden;
     width: 100%;
     height: 100vh;
     max-width: 1600px;
